# poly

./: .gitignore  CMakeLists.txt
include/: poly.hpp
include/poly/: data.hpp  primitives.hpp  property.hpp  utils.hpp
src/: test.cpp
src/poly/: data.cpp  property.cpp
